--- a/iOS/old108/PlayPage.xib
+++ b/iOS/old108/PlayPage.xib
@@ -9,7 +9,6 @@
             <connections>
                 <outlet property="bgView" destination="4" id="30"/>
                 <outlet property="bgViewForAnimation" destination="31" id="32"/>
-                <outlet property="labelCount" destination="11" id="19"/>
                 <outlet property="labelSubtitle" destination="13" id="21"/>
                 <outlet property="labelTitle" destination="16" id="20"/>
                 <outlet property="popupBt1" destination="27" id="vJz-w3-Ldm"/>
@@ -18,7 +17,6 @@
                 <outlet property="view" destination="1" id="3"/>
                 <outlet property="viewClosePopUp" destination="22" id="25"/>
                 <outlet property="viewClosePopupImage" destination="24" id="h3W-72-not"/>
-                <outlet property="viewPlayDelay" destination="9" id="18"/>
                 <outlet property="viewPlaying" destination="12" id="17"/>
             </connections>
         </placeholder>
@@ -37,45 +35,19 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <animations/>
                 </imageView>
-                <view contentMode="scaleToFill" id="9" userLabel="View - 대기">
+                <view contentMode="scaleToFill" id="12" userLabel="View - 절하기">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="playDelayBg.png" id="10">
-                            <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
-                        </imageView>
-                        <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1배를 올립니다." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="11">
-                            <rect key="frame" x="104" y="145" width="273" height="34"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                            <color key="textColor" red="0.1137254902" green="0.12549019610000001" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <animations/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                </view>
-                <view hidden="YES" contentMode="scaleToFill" id="12" userLabel="View - 절하기">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="playingBg.png" id="14">
-                            <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
-                        </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="title" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" id="16">
                             <rect key="frame" x="173" y="37" width="273" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.9137254901960784" green="0.52941176470588236" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
-                            <color key="shadowColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                            <size key="shadowOffset" width="0.0" height="1"/>
+                            <color key="shadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <size key="shadowOffset" width="0.0" height="0.0"/>
                         </label>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="13">
                             <rect key="frame" x="15" y="245" width="450" height="70"/>
@@ -141,8 +113,6 @@
         </view>
     </objects>
     <resources>
-        <image name="playDelayBg.png" width="960" height="640"/>
-        <image name="playingBg.png" width="960" height="640"/>
         <image name="recordPageBg.png" width="960" height="640"/>
     </resources>
 </document>
